Improved performance by up to 250% more